Added steps on how to add JavaFX VM options