@@ -16,8 +16,11 @@ skills they wish to learn.
 
 ```Installation Steps```
 - You will find JUNIT installed under the "lib" directory of the project.
-- 
+
 - You will also find JavaFX installed under "lib", which can be installed via: https://openjfx.io/
 1. Install JavaFX (SDK version 24.0.2)
 2. Extract the Zip and add it to the lib directory
 3. Select "File -> Project Structure -> Libraries" Add the JavaFX .jar files (found in the lib directory of the JavaFX package).
+4. Select "Run -> Edit Configurations".
+5. Find the main application, select "VM Options" and add: --module-path "path/to/your/javafx-sdk-24.0.2/lib" --add-modules javafx.controls,javafx.fxml
+
